# wl-zenwindow

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  agents.toml  deny.toml  release-plz.toml  rename-to-zenw.md
.agents/skills/jj/: README.md  SKILL.md  config.md  git.md  history.md  revsets.md  sharing.md  workspaces.md
.agents/skills/jj/references/: command-gotchas.md  git-experts.md  git-to-jj.md  parallel-agents.md
.github/: dependabot.yml  labels.yml  sync_labels.py
.github/workflows/: deny.yml  docs.yml  lint.yml  release.yml  semver.yml  test.yml  zizmor.yml
examples/gpui/: main.rs
src/: app.rs  dim.rs  error.rs  gamma.rs  handlers.rs  lib.rs  render.rs  run.rs  state.rs  surface.rs  toplevel.rs  transition.rs  wayland.rs  window.rs
